--- a/src/app/notes-list/create-note/create-note.component.html
+++ b/src/app/notes-list/create-note/create-note.component.html
@@ -1,1 +1,15 @@
-<p>create-note works!</p>
+<div class="create-note">
+  <button class="button-icon">
+    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M15 10V18H13V10H15Z" fill="black"/>
+      <path d="M11 18V10H9L9 18H11Z" fill="black"/>
+      <path fill-rule="evenodd" clip-rule="evenodd" d="M17 2H7V6H3V8H5V22H19V8H21V6H17V2ZM15 6V4H9V6H15ZM7 8V20H17V8H7Z" fill="black"/>
+    </svg>
+  </button>
+  <button class="button-icon">
+    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path fill-rule="evenodd" clip-rule="evenodd" d="M20.5405 7.22482L9.58034 18.185L3.4606 12.0653L4.87481 10.651L9.58034 15.3566L19.1263 5.81061L20.5405 7.22482Z" fill="black"/>
+    </svg>
+  </button>
+  <input class="input">
+</div>
