--- a/src/app/notes-list/notes.component.html
+++ b/src/app/notes-list/notes.component.html
@@ -2,14 +2,32 @@
   <h1 class="text--h1">Заметки</h1>
   <div class="notes__editing-block">
     <div class="notes__list-block">
-      <p class="text--p">Заметки отсутсвуют</p>
-      <ul class="notes__list">
-          <li>
-            <app-note></app-note>
-          </li>
-      </ul>
-      <app-create-note></app-create-note>
+      @if (notesIsMissing) {
+        <p class="text--p">Заметки отсутствуют</p>
+      }
+      @if (notesIsExist) {
+        <ul class="notes__list">
+          @for (note of notesList; track note) {
+            <li>
+              <app-note
+                [value]="note"
+                (clickOnDelete)="deleteNote($index)"
+              ></app-note>
+            </li>
+          }
+        </ul>
+      }
+      @if (createNoteComponentIsDisplayed) {
+        <app-create-note
+          (clickOnSaved)="saveNote($event)"
+          (clickOnDelete)="hideCreateNoteComponent()"
+        ></app-create-note>
+      }
     </div>
-    <button  class="button">Добавить заметку</button>
+    <button
+      (click)="displayCreateNoteComponent()"
+      [disabled]="createNoteComponentIsDisplayed"
+      class="button"
+    >Добавить заметку</button>
   </div>
 </div>
