--- a/src/app/notes-list/notes.component.scss
+++ b/src/app/notes-list/notes.component.scss
@@ -1,54 +1,53 @@
 .notes {
   display: flex;
   flex-direction: column;
-  gap: 32px;
+  gap: var(--gap-xl);
 
   &__editing-block {
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: var(--gap-l);
   }
 
   &__list-block {
     display: flex;
     flex-direction: column;
-    gap: 12px;
+    gap: var(--gap-m);
   }
 
   &__list {
     display: flex;
     flex-direction: column;
-    gap: 12px;
+    gap: var(--gap-m);
   }
 }
 
 .text--h1 {
-  font-size: 36px;
-  font-weight: bold;
+  font-size: var(--text-h1-size);
+  font-weight: var(--text-h1-weight);
 }
 
 .text--p {
-  font-size: 19px;
+  font-size: var(--text-p-size);
 }
 
 .button {
-  background: #FFFFFF;
-  color: #526ed3;
-  border: #526ed3 solid 1px;
-  border-radius: 2px;
-  height: 44px;
-  width: 150px;
+  background-color: var(--button-background-color);
+  color: var(--button-color);
+  border: var(--button-color) solid 1px;
+  border-radius: var(--button-border-radius);
+  height: var(--button-height);
+  width: var(--button-width);
   cursor: pointer;
 
   &:hover {
-    color: #6c86e2;
-    border-color: #889EE8;
+    color: var(--button-hover-color);
+    border-color: var(--button-hover-color);
   }
 
   &:disabled {
-    color: #DADFF3;
-    border-color: #DADFF3;
+    color: var(--button-disabled-color);
+    border-color: var(--button-disabled-color);
+    cursor: default;
   }
 }
-
-
